frontend/sch-front-ssr/sch-front-ssr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sch-front-ssr-svc
spec:
  selector:
    app: sch-front-ssr
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
